src/test/deca/context/invalid/Objet/Or-Field-BadType.deca
// Description:
//      Doing operations on  public fields in main
//
// Results:
//      (RULE 3.33) Illegal operand type.
//
// History:
//      created on 19/1/2022

class A {
    float x;
}

class B {
    boolean x;
}

{
    A a = new A();
    B b = new B();
    boolean y = a.x || b.x;
}